# metadata_date_extract_from_images

./: .gitignore  README.md
metadata_date_extract/: main.py  pyproject.toml
